fixes #921 overlapping solved

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -5773,7 +5773,7 @@ footer .right>span:nth-child(2) {
     text-align: center;
 }
 .roomsPanel .pagination {
-    margin-top: 10px !important;
+    margin-top: 5px !important;
 }
 .panelSummary .panel-body .summaryWrapper,
 .panelSummary .summaryWrapper .sumDiv {
